--- a/FrontEnd/view/userDashboard.html
+++ b/FrontEnd/view/userDashboard.html
@@ -47,14 +47,14 @@
     <div class="row">
         <div class="col-lg-3">
             <div class="sidebar">
-                <a href="../pages/userDashboard.html">Dashboard</a>
+                <a href="/userDashboard.html">Dashboard</a>
                 <a id="userSalesControllerSection">Sales</a>
                 <a href="orderDetails.html">Sale Details</a>
                 <a id="userSupplierControllerSection">Suppliers</a>
                 <a id="userCustomerControllerSection">Customers</a>
                 <a id="userEmployeeControllerSection">Employees</a>
                 <a id="userInventoryControllerSection">Inventory</a>
-                <a href="../pages/login.html">Log Out</a>
+                <a href="/login.html">Log Out</a>
             </div>
         </div>
         <!-- Main content -->
