--- a/FrontEnd/view/employee.html
+++ b/FrontEnd/view/employee.html
@@ -259,13 +259,13 @@
 
                     <div class="row mt-4">
                         <div class="col d-flex justify-content-center">
-                            <button type="button" class="btn btn-success fw-bold w-100" id="employeeSaveBtn">Save Supplier</button>
+                            <button type="button" class="btn btn-success fw-bold w-100" id="employeeSaveBtn">Save Employee</button>
                         </div>
                         <div class="col d-flex justify-content-center">
-                            <button type="button" class="btn btn-warning fw-bold w-100" id="employeeUpdateBtn">Update Supplier</button>
+                            <button type="button" class="btn btn-warning fw-bold w-100" id="employeeUpdateBtn">Update Employee</button>
                         </div>
                         <div class="col d-flex justify-content-center">
-                            <button type="button" class="btn btn-danger fw-bold w-100" id="employeeDeleteBtn">Delete Supplier</button>
+                            <button type="button" class="btn btn-danger fw-bold w-100" id="employeeDeleteBtn">Delete Employee</button>
                         </div>
                     </div>
 
